[project]
name = "nanoroute"
version = "2.0.5"
description = "Small, fast, HTTP URL router"
readme = "ReadMe.md"
requires-python = ">=3.13"
license = "CC0-1.0"
license-files = ["License"]
authors = [{ "name" = "Vito Gamberini", "email" = "vito@gamberini.email" }]
keywords = ["WSGI"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
]
urls = { "Documentation" = "https://nanoroute.dev" }
dependencies = []

[dependency-groups]
test = ["pytest"]
docs = ["sphinx", "sphinxext-opengraph"]

[build-system]
requires = ["py-build-cmake~=0.5.0"]
build-backend = "py_build_cmake.build"

[tool.py-build-cmake.module]
generated = "module"

[tool.py-build-cmake.sdist]
include = ["CMakeLists.txt", "src"]

[tool.py-build-cmake.cmake]
minimum_version = "3.25"
generator = "Ninja"
config = "Release"
build_type = "Release"
build_args = ["-j"]

[tool.py-build-cmake.windows.cmake.options]
"CMAKE_MSVC_RUNTIME_LIBRARY:STRING" = "MultiThreaded"
